# androidDebugInfo

./: .gitignore  build.gradle  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/debugview/sample/: AppCompatDialogPopupDemoActivity.java  MainActivity.java  PlatformBlueFragment.java  PlatformFragmentDialogPopupDemoActivity.java  PlatformRedFragment.java  RedFragment.java
app/src/main/java/com/newchar/debug/monitor/: DebugMonitorActivity.java
app/src/main/java/com/newchar/debug/sample/: App.java  AppCompatDialogPopupDemoActivity.java  BlueFragment.java  ColorFragmentsActivity.java  DemoAlertDialog.java  DiskOperationDemoActivity.java  MainActivity.java  OschinaApiActivity.java  PlatformBlueFragment.java  PlatformFragmentDialogPopupDemoActivity.java  PlatformRedFragment.java  RedFragment.java
app/src/main/java/com/newcharbase/app/monitor/: DebugMonitorActivity.java
app/src/main/res/layout/: act_dialog_popup_demo.xml  act_main.xml  act_platform_fragment_demo.xml  frag_platform_blue.xml  frag_platform_red.xml  layout_popup_content.xml
app_pc_debug_tools/: README.md  build.gradle.kts  proguard-rules.pro
app_pc_debug_tools/src/jvmMain/kotlin/com/newchar/debug/pc/: AppContent.kt  Main.kt
deviceinfo/src/main/java/com/newchar/deviceview/: DeviceMonitor.java  DeviceStaticInfoCollector.java  DevicesInfoPlugin.java
deviceinfo/src/main/java/com/newchar/deviceview/bean/: DevicesInfo.java
deviceinfo/src/main/java/com/newchar/deviceview/devices/: Strict.java
gradle/wrapper/: gradle-wrapper.properties
lib_base/: build.gradle  proguard-rules.pro
lib_base/src/main/: AndroidManifest.xml
lib_debug/: build.gradle
lib_debug/src/main/: AndroidManifest.xml
lib_debug_core/: build.gradle  proguard-rules.pro
lib_debug_core/src/main/: AndroidManifest.xml
lib_debug_core/src/main/java/com/newchar/debug/: CanFlowState.java  CanNotFlowState.java  DebugManager.java  DebugPanelActivity.java  FloatViewService.java  IFLowState.java
lib_debug_core/src/main/java/com/newchar/debug/adapter/: ChildViewHolder.java  EasyExpandableAdapter.java  GroupViewHolder.java  NewLqBaseAdapter.java  NewLqBaseHolder.java
lib_debug_core/src/main/java/com/newchar/debug/annotation/: DebugUiContext.java
lib_debug_core/src/main/java/com/newchar/debug/api/: PluginContext.java  PluginManager.java  ScreenDisplayPlugin.java
lib_debug_core/src/main/java/com/newchar/debug/core/: UiContextActivityCallback.java  UiContextDisplayCoordinator.java
lib_debug_core/src/main/java/com/newchar/debug/init/: AppInit.java  InitContainer.java
lib_debug_core/src/main/java/com/newchar/debug/lifecycle/: AppLifecycleManager.java  DefaultActivityCallback.java  PageLifecycleWrapper.java  UiContextActivityCallback.java  UiContextDisplayCoordinator.java
lib_debug_core/src/main/java/com/newchar/debug/utils/: FileUtils.java  (+13 more)
lib_debug_core/src/main/java/com/newchar/debugview/: CanFlowState.java  DebugManager.java  DebugPanelActivity.java  FloatViewService.java
lib_debug_device/: build.gradle  consumer-rules.pro
lib_debug_device/src/main/java/com/newchar/deviceview/: DeviceMonitor.java  DeviceStaticInfoCollector.java  DevicesInfoPlugin.java
lib_debug_log/: build.gradle
lib_debug_monitor/: .gitignore  build.gradle  proguard-rules.pro
lib_debug_monitor/src/main/cpp/: CMakeLists.txt  jvmti.cpp
lib_debug_net/: build.gradle  proguard-rules.pro
lib_debug_net/src/main/: AndroidManifest.xml
lib_debug_touch/: .gitignore  build.gradle  consumer-rules.pro  proguard-rules.pro
lib_debug_touch/src/main/: AndroidManifest.xml
lib_debug_web/: .gitignore  build.gradle  consumer-rules.pro  proguard-rules.pro
lib_touch_restore/src/main/java/com/newchar/touchrestore/: MotionManager.java  RecordTouchEventTask.java  TouchRestorePlugin.java
(+227 files in other folders)
